# QGISGeoNodePlugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  Qgis_GeoNode_dockwidget.py  Qgis_GeoNode_dockwidget_base.ui  README.md  __init__.py  index.html  metadata.txt  mkdocs.yml  pb_tool.cfg  pluginadmin.py  pyproject.toml  resources.py  resources.qrc  sitemap.xml
.github/workflows/: ci.yml  codeql.yml  docs.yml  main.yml  rebuild-docs.yml  release.yml
about/: index.html
changelog-base/: index.html
development/: index.html
docs/: about.md  development.md  index.md  qep-remove-core-geonode-support.md  user-guide.md
geonode_api/: layer.py  maps.py
help/source/: conf.py  index.rst
repo/: plugins.xml
resources/: resources.qrc
scripts/: pyqt5_to_pyqt6_2.py
search/: search_index.json
src/qgis_geonode/: __init__.py  api_client.py  conf.py  main.py  metadata.py  network.py  sldconverter.py  styles.py  tasks.py  uploader.py  utils.py
src/qgis_geonode/apiclient/: __init__.py  api_client.py  apiv2.py  base.py  csw.py  geonode.py  geonode_api_v2.py  geonode_v3.py  layer.py  legacy.py  maps.py  models.py  version_legacy.py  version_postv2.py
src/qgis_geonode/gui/: connection_dialog.py  geonode_data_source_widget.py  geonode_map_layer_config_widget.py  geonode_maplayer_config_widget_factory.py  geonode_provider.py  geonode_source_select_provider.py  layer_properties_config_widget.py  search_result_widget.py
src/qgis_geonode/httpclient/: __init__.py  errors.py  transport.py
src/qgis_geonode/qgisgeonode/: Qgis_GeoNode_dockwidget.py  conf.py  default.py  main.py  utils.py
src/qgis_geonode/tasks/: network_task.py  tasks.py  upload.py
src/qgis_geonode/ui/: connection_dialog.ui  geonode_datasource_widget.ui  qgis_geonode_connection.ui  qgis_geonode_layer_dialog.ui  qgis_geonode_main_ui.ui  qgis_geonode_searched_resource.ui  search_result_widget.ui
test/: __init__.py  _mock_geonode.py  conftest.py  old_test_apiclient.py  old_test_apiclient_csw.py  test_Qgis_GeoNode_dockwidget.py  test_apiclient.py  test_apiclient_csw.py  test_apiclient_geonode_api_v2.py  test_apiclient_geonode_v3.py  test_conf.py  test_httpclient.py  test_layer_uploader_task.py  test_resources.py
test/_mock_geonode_data/: layer_detail_response1.json  layer_detail_response2.xml  layer_list_filtered_response1.json  layer_list_response1.json  layer_style_list_response1.json  map_list_filtered_response1.json  map_list_response1.json
ui/: qgis_geonode_connection.ui  qgis_geonode_main_ui.ui
user-guide/: index.html
