[tool.poetry]
name = "qgis_geonode"
version = "0.4.0"
description = "A QGIS plugin for integrating with GeoNode"
authors = ["Kartoza <info@kartoza.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
typer = "^0.3.2"
pytest = "^6.2.1"
pytest-qt = "^3.3.0"
black = {version = "^20.8b1", allow-prereleases = true, python = "^3.8"}
flask = "^1.1.2"
importlib-metadata = "^3.3.0"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.3"
httpx = "^0.16.1"
pytest-xvfb = "^2.0.0"
Pygments = "^2.8.0"
pymdown-extensions = "^8.1.1"
pytest-custom-exit-code = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
addopts = "--verbose --exitfirst"

[tool.black]
exclude = """\
"""

[tool.qgis-plugin.metadata]
name = "QGIS GeoNode"
qgisMinimumVersion = "3.18"
icon = "mIconGeonode.svg"
experimental = "True"
deprecated = "False"
homepage = "https://kartoza.github.io/qgis_geonode"
tracker = "https://github.com/kartoza/qgis_geonode/issues"
repository = "https://github.com/kartoza/qgis_geonode"
tags = [
    "geonode",
    "wms",
    "wfs",
    "wcs",
]
category = "plugins"
hasProcessingProvider = "no"
about = """\
This plugin adds GeoNode client functionality to QGIS - Search, load and manage GeoNode resources from inside QGIS\
"""
# changelog: dynamically pulled from the README.md file
# description: dynamically pulled from the tool.poetry.description section
# version: dynamically pulled from the tool.poetry.version section
# author: dynamically pulled from the tool.poetry.authors section
# email: dynamically pulled from the tool.poetry.authors section
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

