[tool.poetry]
name = "qgis_geonode"
version = "1.0.1"
description = "A QGIS plugin for integrating with modern GeoNode"
authors = ["Kartoza <info@kartoza.com>", "GeoSolutions <info@geosolutionsgroup.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
typer = "^0.12.5"
pytest = "^7.4.4"
pytest-qt = "^4.2.0"
black = "^22.12.0"
flask = "^2.2.5"
importlib-metadata = "^6.7.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.2.0"
httpx = "^0.24.1"
pytest-xvfb = "^3.0.0"
pytest-custom-exit-code = "^0.3.0"
mypy = "^1.0.0"
qgis-stubs = "^0.2.0.post1"
PyQt5-stubs = "^5.15.6.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
addopts = "--verbose --exitfirst"

[tool.black]
exclude = """\
"""

[tool.qgis-plugin.metadata]
name = "QGIS GeoNode"
qgisMinimumVersion = "3.34"
icon = "plugin-logo.png"
experimental = "False"
deprecated = "False"
homepage = "https://geonode.org/QGISGeoNodePlugin"
tracker = "https://github.com/GeoNode/QGISGeoNodePlugin/issues"
repository = "https://github.com/GeoNode/QGISGeoNodePlugin"
tags = [
    "geonode",
    "wms",
    "wfs",
    "wcs",
]
category = "plugins"
hasProcessingProvider = "no"
about = """\
This plugin adds GeoNode client functionality to QGIS - search, load and manage GeoNode resources from inside QGIS.

Initial development has been commissioned by the by the Pacific Community (SPC), with funcding from the World Bank, \
and implemented by the Kartoza and GeoSolutions teams. The plugin is actively maintained and aims to keep up to \
date with changes in the GeoNode API.

Check the website for a user guide and more detail.\
"""
# changelog: dynamically pulled from the README.md file
# description: dynamically pulled from the tool.poetry.description section
# version: dynamically pulled from the tool.poetry.version section
# author: dynamically pulled from the tool.poetry.authors section
# email: dynamically pulled from the tool.poetry.authors section
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

