[tool.poetry]
name = "qgis_geonode"
version = "2.2.0"
description = "A QGIS plugin for integrating with modern GeoNode"
authors = ["GeoNode Development Team <info@geosolutionsgroup.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
toml = "^0.10.2"
typer = "^0.12.5"
httpx = "^0.28.1"
PySide6 = "^6.11" # required to replace pyrcc5 with pyside6-rcc
# Security-pinned transitives (dependabot alerts):
# - urllib3 <2.6.3 has high-severity decompression-bomb / proxy-auth-leak CVEs
# - h11    <0.16   has a CRITICAL Chunked-Encoding parsing CVE (pulled by httpx)
urllib3 = "^2.6.3"
h11 = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-qt = "^4.2.0"
pytest-xvfb = "^3.0.0"
pytest-custom-exit-code = "^0.3.0"
flask = "^3.1.3"
black = "^22.12.0"
mypy = "^1.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.2.0"
qgis-stubs = "^0.2.0.post1"

# Qt runtime bindings — only needed on Windows where QGIS does not ship them
# system-wide. Optional groups: install exactly one with
#   poetry install --with qt5         (when targeting QGIS 3.x)
#   poetry install --with qt6         (when targeting QGIS 4.x)
[tool.poetry.group.qt5]
optional = true

[tool.poetry.group.qt5.dependencies]
PyQt5 = {version = "5.15.6", platform = "win32"}
PyQt5-Qt5 = {version = "5.15.2", platform = "win32"}
PyQt5-stubs = "^5.15.6.0"

[tool.poetry.group.qt6]
optional = true

[tool.poetry.group.qt6.dependencies]
PyQt6 = {version = "^6.7", platform = "win32"}
PyQt6-Qt6 = {version = "^6.7", platform = "win32"}

[tool.pytest.ini_options]
addopts = "--verbose --exitfirst"

[tool.black]
exclude = """\
"""

[tool.qgis-plugin.metadata]
name = "QGIS GeoNode"
qgisMinimumVersion = "3.34"
qgisMaximumVersion=4.99
icon = "plugin-logo.png"
experimental = "False"
deprecated = "False"
homepage = "https://geonode.org/QGISGeoNodePlugin"
tracker = "https://github.com/GeoNode/QGISGeoNodePlugin/issues"
repository = "https://github.com/GeoNode/QGISGeoNodePlugin"
tags = [
    "geonode",
    "wms",
    "wfs",
    "wcs",
]
category = "plugins"
hasProcessingProvider = "no"
about = """\
This plugin adds GeoNode client functionality to QGIS - search, load and manage GeoNode resources from inside QGIS.

Initial development has been commissioned by the by the Pacific Community (SPC), with funcding from the World Bank, \
and implemented by the Kartoza and GeoSolutions teams. The plugin is actively maintained and aims to keep up to \
date with changes in the GeoNode API.

Check the website for a user guide and more detail.\
"""
# changelog: dynamically pulled from the README.md file
# description: dynamically pulled from the tool.poetry.description section
# version: dynamically pulled from the tool.poetry.version section
# author: dynamically pulled from the tool.poetry.authors section
# email: dynamically pulled from the tool.poetry.authors section
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


